# livraria-novo

./: .gitignore  db.sqlite3  pyproject.toml
core/: models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor_editora.py  0003_livro_alter_autor_options.py  0004_livro_categoria_livro_editora.py  0005_alter_livro_categoria_alter_livro_editora.py  0006_alter_livro_categoria_alter_livro_editora.py  0007_alter_livro_categoria_alter_livro_editora.py
livraria/: settings.py  urls.py
